    get reverted.

  Developer notes (these should be moved to the end in the release):
    * killed "processors" (finally), formatter method changed to:
      formatter.parser(parsername, lines)
    * refactored some actions to use ActionBase base class
    * moved "test" action from wikiaction to MoinMoin/action/
      (and use ActionBase)
    * moved "SystemInfo" macro from wikimacro to MoinMoin/macro/
    * moved wikiaction.py stuff to MoinMoin/action/__init__.py
    * moved wikimacro.py stuff to MoinMoin/macro/__init__.py
    * moved wikirpc.py stuff to MoinMoin/xmlrpc/__init__.py
    * moved wikitest.py stuff to action/test.py (only used from there)
    * moved formatter/base.py to formatter/__init__.py (FormatterBase)
    * moved util/ParserBase.py to parser/ParserBase.py
    * moved / splitted request.py into MoinMoin/request/*
      Most stuff will be broken, please help fixing it (usually some imports
      will be missing and the adaptor script will need a change maybe):
      CGI works
      CLI works
      STANDALONE not
      MODPY not
      WSGI not
      FCGI not
      TWISTED not
    * moved util/antispam.py to security/antispam.py,
      moved util/autoadmin.py to security/autoadmin.py,
      moved security.py to security/__init__.py,
      moved wikiacl.py to security/__init__.py.
    * moved logfile/logfile.py to logfile/__init__.py
    * moved mailimport.py to mail/mailimport.py,
      moved util/mail.py to mail/sendmail.py
    * moved auth.py to auth/__init__.py,
      moved util/sessionParser.py to auth/_PHPsessionParser.py,
      teared auth code into single modules under auth/* - moin_session handling
      and the builting moin_login method are in auth/__init__.py.
    * added wikiutil.MimeType class (works internally with sanitized mime
      types because the official ones suck)
    * renamed parsers to module names representing sane mimetypes, e.g.:
      parser.wiki -> parser.text_moin_wiki